Setting overflow:hidden on position:absolute does not repaint hidden content https://bugs.webkit.org/show_bug.cgi?id=116994

Patch by Yuki Sekiguchi <yuki.sekiguchi@access-company.com> on 2013-06-13
Reviewed by Simon Fraser.

Source/WebCore:

Since a container which has overflow clip of RenderBox which has self painting layer doesn't have a rect of the RenderBox as visual overflow,
the container should not clip request repainting rect of the RenderBox.

Test: fast/repaint/change-overflow-and-display-of-relative.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computeRectForRepaint):
* rendering/RenderLayerModelObject.cpp:
(WebCore::RenderLayerModelObject::shouldUseClipForRepaint): If this has self painting layer, we should not clip for repaint.
* rendering/RenderLayerModelObject.h:

LayoutTests:

* fast/repaint/change-overflow-and-display-of-relative-expected.txt: Added.
* fast/repaint/change-overflow-and-display-of-relative.html: Added.

Canonical link: https://commits.webkit.org/135753@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151549 268f45cc-cd09-0410-ab3c-d52691b4dbfc